--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <title>Andrew Storey</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -49,28 +49,29 @@
 
     <header>
         <h1>Your Website</h1>
-        <p>Welcome to our modern homepage!</p>
+        <p>Welcome to my CV!</p>
     </header>
 
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
+        <a href="#">Education</a>
+        <a href="#">Experience</a>
+        <a href="#">Extra Curricular</a>
+        <a href="#">Interests</a>
         <a href="#">Contact</a>
     </nav>
 
     <section>
-        <h2>Featured Content</h2>
-        <p>This is where you can highlight key features or content of your website.</p>
+        <h2>Swansea University</h2>
+        <p>First Class Honours...</p>
     </section>
 
     <section>
-        <h2>Latest Updates</h2>
-        <p>Share the latest news, blog posts, or any other updates here.</p>
+        <h2>UEA</h2>
+        <p>BLah BLah Blah.</p>
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
+        <p>&copy; 2023. All rights reserved.</p>
     </footer>
 
 </body>
