--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
 
     <header>
-        <h1>Your Website</h1>
+        <h1>Andrew Storey</h1>
         <p>Welcome to my CV!</p>
     </header>
 
