--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
 
     <nav>
-        <a href="/education">Education</a>
+        <a href="astorey5.github.io/education">Education</a>
         <a href="#">Experience</a>
         <a href="#">Extra Curricular</a>
         <a href="#">Interests</a>
