--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     </nav>
 
     <div class="card">
-        <img src="your-image-url.jpg" alt="Card Image">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.theworldreimagined.org%2Fpartner%2Fswansea-university%2F&psig=AOvVaw2xwbkLoHriG-2O1Pj26bVU&ust=1702761146055000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCJDxhOCtkoMDFQAAAAAdAAAAABAD" alt="Card Image">
         <div class="card-content">
-            <h2 class="card-title">Card Title</h2>
+            <h2 class="card-title">Swansea University</h2>
             <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
     </div>
