--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         }
 
         .card {
+            width: 80%;
             max-width: 400px;
             margin: 20px auto;
             background-color: #fff;
@@ -24,7 +25,8 @@
 
         .card img {
             width: 100%;
-            height: auto;
+            height: 200px; /* Fixed height for the image */
+            object-fit: cover;
             border-bottom: 1px solid #e1e1e1;
         }
 
@@ -34,6 +36,11 @@
 
         .card-title {
             font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+
+        .card-subtitle {
+            color: #888;
             margin-bottom: 10px;
         }
 
@@ -90,9 +97,10 @@
     </nav>
 
     <div class="card">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.theworldreimagined.org%2Fpartner%2Fswansea-university%2F&psig=AOvVaw2xwbkLoHriG-2O1Pj26bVU&ust=1702761146055000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCJDxhOCtkoMDFQAAAAAdAAAAABAD" alt="Card Image">
+        <img src="your-image-url.jpg" alt="Card Image">
         <div class="card-content">
-            <h2 class="card-title">Swansea University</h2>
+            <h2 class="card-title">Card Title</h2>
+            <h3 class="card-subtitle">Subtitle</h3>
             <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
     </div>
