--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
 
         header {
-            background-color: #333;
+            background-image: repeating-radial-gradient(  #0c0a0a 80%,#2f312f 90%,#3f4549 90%);
+            background-size: 65px 65px;
             color: #fff;
             padding: 1em;
             text-align: center;
