--- a/experience.html
+++ b/experience.html
@@ -102,36 +102,12 @@
     <div class="card">
         <img src="90b695b5-7f49-4578-b377-e810697ff702.JPG" alt="Graduation Photo">
         <div class="card-content">
-            <h2 class="card-title">Swansea University</h2>
-            <h3 class="card-subtitle">BSc Computer Science - First Class Hons</h3>
-            <p class="card-content">I transfered to second year of studies at Swansea University in 2021 from the University of East Anglia. Graduated 2023
-                <br /><br />
-                <b>Dissertation:</b> Using AI to value second hand cars. This involved web scraping and then cleaning data to put into a random forests model. 
-                <br /><br />
-                <b>Third Year Modules:</b> Embedded System Design, Big data & Machine learning, Cryptography, Teaching 
-                Computing Via School Placement, Mobile Apps, Advanced Object Orientated Programming
-                <br /><br />
-                <b>Second Year Modules:</b> Software Engineering (Java), Declarative Programming (Haskell, Prolog), 
-                Database Systems, Algorithms, Formal Languages & Automata, Graphics, Human Computer 
-                Interaction, Concurrency.</p>
+            <h2 class="card-title">Windsurf Instructor</h2>
+            <h3 class="card-subtitle">Poole Windsurfing</h3>
+            <p class="card-content">I instructed windsurfing.</p>
         </div>
     </div>
 
-    <div class="card">
-        <img src="IMG_5431.JPG" alt="UEA Photo">
-        <div class="card-content">
-            <h2 class="card-title">University Of East Anglia (UEA)</h2>
-            <h3 class="card-subtitle">BSc Computer Science </h3>
-            <p class="card-content">2019 - 2021. Transferred to Swansea to continue Studies.
-                <br /><br />
-                <b>First year grade:</b> First Class. First year modules: Databases, Programming (Java), Mathematics, Web 
-                based programming, Systems development, and Computing principles. 
-                <br /><br />
-                <b>Second year modules:</b> Analogue & Digital Electronics, Architecture and Operating Systems, 
-                Programming (C, C++, Java), Software Engineering, Data Structures & Algorithms, Embedded 
-                Systems.
-        </div>
-    </div>
 
     <footer>
         <p>&copy; 2023. All rights reserved.</p>
