--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </header>
 
     <nav>
-        <a href="education.html">Education</a>
+        <a href="index.html">Education</a>
         <a href="experience.html">Experience</a>
         <a href="extra.html">Extra Curricular</a>
         <a href="interests.html">Interests</a>
